# gen-ai-python-playground

./: .envrc.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup-git-hooks.sh
.github/workflows/: ci.yaml
anthropic_common/: __init__.py  streaming.py
claude/: README.md  __main__.py
claude_cli/: README.md  __main__.py
gemini/: README.md
gemini_cli/: README.md  __main__.py
gemini_common/: __init__.py  api.py
openai/: README.md  __main__.py
openai_cli/: README.md  __main__.py
system_prompts/: coding_000000
vertex_cli/: README.md  __main__.py
