[project]
name = "gen-ai-python-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan Mohrbacher",email = "johnnymo87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "langchain-anthropic (>=0.3.8,<0.4.0)",
    "google-genai (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pre-commit = "^4.1.0"
flake8-type-checking = "^3.0.0"
mypy = "^1.14.1"
