[project]
name = "gen-ai-python-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan Mohrbacher",email = "johnnymo87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "google-genai (>=1.9.0,<2.0.0)",
    "openai (>=1.75.0,<2.0.0)",
    "anthropic[vertex] (>=0.52.0,<0.53.0)",
    "google-cloud-aiplatform (>=1.94.0,<2.0.0)"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anthropic_common", "claude_cli", "gemini_cli", "gemini_common", "openai_cli", "vertex_cli"]

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "pre-commit>=4.1.0",
    "flake8-type-checking>=3.0.0",
    "mypy>=1.14.1"
]
