[project]
name = "gen-ai-python-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan Mohrbacher",email = "johnnymo87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "google-genai (>=1.9.0,<2.0.0)",
    "openai (>=1.75.0,<2.0.0)",
    "anthropic[vertex] (>=0.52.0,<0.53.0)",
    "google-cloud-aiplatform (>=1.94.0,<2.0.0)"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anthropic_common", "claude_cli", "gemini_cli", "gemini_common", "openai_cli", "vertex_cli"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.14.1"
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "TCH", # flake8-type-checking
]
ignore = [
    "E203", # whitespace before ':'
    "TC002", # Move third-party import into type-checking block (requires careful handling)
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E712"] # Allow e.g. `assert foo() == True` in test files

[tool.ruff.lint.isort]
# Configure isort to be compatible with black formatting
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
